--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="role_manager">Manager</string>
     <string name="role_user">User</string>
     <string name="role_other">Other</string>
+    <string name="register">Register</string>
 </resources>
