--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="role_user">User</string>
     <string name="role_other">Other</string>
     <string name="register">Register</string>
+    <string name="test_run">Test run</string>
 </resources>
